--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -1,4 +1,7 @@
-## 树梅派截图
+pybluez的使用
+===================
+
+## 树莓派截图
 - 在Raspbian上安装scrot：
 - 命令： sudo apt-get install scrot
 - 安装可以通过终端打开截图的shotwell：
@@ -7,15 +10,15 @@
 
 
 ## 默认python设置为python3
- 1.命令行中python查看当前版本
- 2.sudo rm /usr/bin/python 移除当前版本
- 3.sudo ln -s /usr/bin/python3 /usr/bin/python 设置3为当前版本
- 4.修改pip版本，用which pip查看pip位置，然后修改为python3
+ 1.命令行中python查看当前版本. 
+ 2.sudo rm /usr/bin/python 移除当前版本. 
+ 3.sudo ln -s /usr/bin/python3 /usr/bin/python 设置3为当前版本. 
+ 4.修改pip版本，用which pip查看pip位置，然后修改为python3. 
 
 ## 安装pybluez包
-1.sudo apt-get install python-dev
-2.sudo apt-get install libbluetooth-dev
-3.sudo pip3 install pybluez
+1.sudo apt-get install python-dev. 
+2.sudo apt-get install libbluetooth-dev. 
+3.sudo pip3 install pybluez. 
 
 ## 测试代码（查看是否正常运行）
 ```
