--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -43,3 +43,75 @@ def what_services(addr,name):
         print("")
         print("")
 ```
+
+## 树莓派上与Arduino通信的代码
+```
+arduino.py
+import bluetooth
+bd_addr = "98:D3:32:71:25:26"
+port=1
+sock=bluetooth.BluetoothSocket(bluetooth.RFCOMM)
+sock.connect((bd_addr,port))
+sock.send("1")
+sock.close()
+```
+
+## HC-05蓝牙模块的设置
+### 接线
+1. +5V --> 5V
+2. GND --> GND
+3. TX --> RX
+4. RX -->TX
+
+### 在arduino初始化HC05模块
+```
+Arduino代码烧入
+#include <SoftwareSerial.h> 
+
+// Pin10为RX，接HC05的TXD
+// Pin11为TX，接HC05的RXD
+SoftwareSerial BT(10, 11); 
+char val;
+
+void setup() {
+  Serial.begin(38400); 
+  Serial.println("BT is ready!");
+  // HC-05默认，38400
+  BT.begin(38400);
+}
+
+void loop() {
+  if (Serial.available()) {
+    val = Serial.read();
+    BT.print(val);
+  }
+
+  if (BT.available()) {
+    val = BT.read();
+    Serial.print(val);
+  }
+}
+```
+1. 把程序烧入（烧入时要把RX,TX的接线拔掉）
+2. 拔掉电源，按住芯片上的黑色按键，再上电，此时红等每个两秒闪烁一次，说明进入AT模式
+3. 在Arduino的串口监视器中，设置为NL+CR，波特率为38400
+5. 尝试在发送端输入AT，若返回OK则进入了模式
+语法｜功能
+----｜----
+AT+PSWD？｜查看当前连接密码
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
