--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -97,12 +97,10 @@ void loop() {
 3. 在Arduino的串口监视器中，设置为NL+CR，波特率为38400
 5. 尝试在发送端输入AT，若返回OK则进入了模式    
 
-语法 ｜ 功能
-------- ｜ --------
-AT+PSWD？｜查看当前连接密码
-
-
-
+First Header | Second Header
+------------ | -------------
+Content from cell 1 | Content from cell 2
+Content in the first column | Content in the second column
 
 
 
