--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -97,10 +97,15 @@ void loop() {
 3. 在Arduino的串口监视器中，设置为NL+CR，波特率为38400
 5. 尝试在发送端输入AT，若返回OK则进入了模式    
 
-First Header | Second Header
+AT指令 | 功能
 ------------ | -------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
+AT+ORGL | 恢复默认设置
+AT+ADDR？ | 查看蓝牙地址
+AT+NAME=<Parma> | 设置设备名字
+AT+ROLE=0/1 ｜ 0为从角色，1为主角色
+AT+PSWD=<Param> | 设置配对码
+AT+UART=<Param> | 设置波特率
+ 
 
 
 
