--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -102,7 +102,7 @@ AT指令 | 功能
 AT+ORGL | 恢复默认设置
 AT+ADDR？ | 查看蓝牙地址
 AT+NAME=<Parma> | 设置设备名字
-AT+ROLE=0/1 ｜ 0为从角色，1为主角色
+AT+ROLE=0/1 | 0为从角色，1为主角色
 AT+PSWD=<Param> | 设置配对码
 AT+UART=<Param> | 设置波特率
  
