--- a/蓝牙模块.md
+++ b/蓝牙模块.md
@@ -107,8 +107,26 @@ AT+PSWD=<Param> | 设置配对码
 AT+UART=<Param> | 设置波特率
  
 
+### Arduino的通信代码
+```
+void setup() {
+  Serial.begin(38400);
 
-
+}
+void loop() 
+{
+  while(Serial.available())
+  {
+    char c=Serial.read();
+    Serial.println("get message is:");
+    Serial.println(c);
+    if(c=='1')
+    {
+      Serial.println("hello Arduino");
+    }
+  }
+}
+```
 
 
 
