--- a/麦克风录音.md
+++ b/麦克风录音.md
@@ -1,1 +1,21 @@
 #麦克风的初始化过程
+1. vim ～/.asoundrc
+2.
+```
+pcm!default{
+type asym
+playback.pcm{
+type plug
+slave.pcm"hw:0,0"
+}
+
+capture.pcm{
+type plug
+slave.pcm"hw:1,0"
+}
+}
+```
+(输入声卡1即usb声卡，输出声卡0）
+3. rec test.wav
+4. aplay test.wav
+5. alsamixer(设置音量等选项）
