--- a/麦克风录音.md
+++ b/麦克风录音.md
@@ -15,7 +15,7 @@ slave.pcm"hw:1,0"
 }
 }
 ```
-(输入声卡1即usb声卡，输出声卡0）
-3. rec test.wav
-4. aplay test.wav
-5. alsamixer(设置音量等选项）
+(输入声卡1即usb声卡，输出声卡0) .  
+3. rec test.wav . 
+4. aplay test.wav . 
+5. alsamixer(设置音量等选项） . 
