--- a/语音机器人.md
+++ b/语音机器人.md
@@ -1,2 +1,8 @@
-# token
-755057e2e890ae73c18e8e0c20aaa85a3fa3b054
+# 安装
+1. git clone https://github.com/wzpan/wukong-robot.git
+2. sudo apt-get install portaudio19-dev python-pyaudio python3-pyaudio sox pulseaudio libsox-fmt-all ffmpeg
+3. pip3 install pyaduio
+- 若pip3安装慢，可更改镜像源，
+4. pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
+5. pip install pip -U
+- pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
