--- a/语音机器人.md
+++ b/语音机器人.md
@@ -4,5 +4,5 @@
 3. pip3 install pyaduio
 - 若pip3安装慢，可更改镜像源，
 4. pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
-5. pip install pip -U
-- pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+5. pip install pip -U  
+pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
