--- a/语音机器人.md
+++ b/语音机器人.md
@@ -1,8 +1,15 @@
 # 安装
-1. git clone https://github.com/wzpan/wukong-robot.git
-2. sudo apt-get install portaudio19-dev python-pyaudio python3-pyaudio sox pulseaudio libsox-fmt-all ffmpeg
-3. pip3 install pyaduio
+
+## 1.克隆git仓库
+- git clone https://github.com/wzpan/wukong-robot.git
+
+## 2.安装sox,ffmpeg和PyAudio
+- sudo apt-get install portaudio19-dev python-pyaudio python3-pyaudio sox pulseaudio libsox-fmt-all ffmpeg
+- pip3 install pyaduio
 - 若pip3安装慢，可更改镜像源，
-4. pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
-5. pip install pip -U  
+- pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
+- pip install pip -U  
 pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+
+## 3.安装依赖的库
+- 
