--- a/语音机器人.md
+++ b/语音机器人.md
@@ -5,12 +5,33 @@
 
 ## 2.安装sox,ffmpeg和PyAudio
 ```
-- sudo apt-get install portaudio19-dev python-pyaudio python3-pyaudio sox pulseaudio libsox-fmt-all ffmpeg
-- pip3 install pyaduio
-- 若pip3安装慢，可更改镜像源，
-- pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
-- pip install pip -U  
+sudo apt-get install portaudio19-dev python-pyaudio python3-pyaudio sox pulseaudio libsox-fmt-all ffmpeg
+pip3 install pyaduio
+若pip3安装慢，可更改镜像源，
+pip install -i https://pypi.tuna.tsinghua.edu.cn/simple some-package(临时使用）
+pip install pip -U  
 pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 ```
 ## 3.安装依赖的库
-- 
+- cd wukong-robot
+- pip3 install -r requirments.txt
+(需要很久)
+
+## 4.编译_snowboydetect.so
+### 安装swig
+```
+wget http://hahack-1253537070.file.myqcloud.com/misc/swig-3.0.10.tar.gz
+tar xvf swig-3.0.10.tar.gz
+cd swig-3.0.10
+sudo apt-get -y update
+sudo apt-get install -y libpcre3 libpcre3-dev
+./configure --prefix=/usr --without-clisp --without-maximum-compile-warnings
+make
+sudo make install
+sudo install -v -m755 -d /usr/share/doc/swig-3.0.10
+sudo cp -v -R Doc/* /usr/share/doc/swig-3.0.10
+sudo apt-get install -y libatlas-base-dev
+```
+### 构建snowboy
+```
+
