--- a/语音机器人.md
+++ b/语音机器人.md
@@ -34,4 +34,29 @@ sudo apt-get install -y libatlas-base-dev
 ```
 ### 构建snowboy
 ```
+wget http://hahack-1253537070.file.myqcloud.com/misc/snowboy.tar.bz2  # 使用我fork出来的版本以确保接口兼容
+tar -xvjf snowboy.tar.bz2
+cd snowboy/swig/Python3
+make
+cp _snowboydetect.so <wukon-robot的根目录/snowboy/>
+```
 
+## 5.安装第三方技能插件wukong-contrib
+```mkdir $HOME/.wukong
+cd $HOME/.wukong
+git clone http://github.com/wzpan/wukong-contrib.git contrib
+pip3 install -r contrib/requirements.txt
+```
+
+
+
+## 6.更新唤醒词
+第一次使用时，需要先创建一个配置文件方便配置，在wukong-robot根目录下执行：
+```
+python3 wukong.pu
+```
+会自动创建配置文件，第一次启动将提示你是否要到用户目录下创建一个配置文件，输入y即可。配置文件会被保存在
+```
+～/.wukong/config.yml
+```
+到[snowboy官网](https://snowboy.kitt.ai/dashboard)训练自己的唤醒词模型，然后把模型放在```~/.wukong```中
